[gd_scene load_steps=17 format=2]

[ext_resource path="res://HUD.gd" type="Script" id=1]
[ext_resource path="res://Assets/lilbub.png" type="Texture" id=2]
[ext_resource path="res://Xolonium-Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Tut.gd" type="Script" id=4]
[ext_resource path="res://Assets/10.png" type="Texture" id=5]
[ext_resource path="res://Assets/singleKeya.png" type="Texture" id=6]
[ext_resource path="res://Assets/clipart154905.png" type="Texture" id=7]
[ext_resource path="res://Assets/icons8-help-64.png" type="Texture" id=8]
[ext_resource path="res://Assets/No-Symbol.svg" type="Texture" id=9]
[ext_resource path="res://Assets/playbutton.png" type="Texture" id=10]
[ext_resource path="res://Assets/red.png" type="Texture" id=11]
[ext_resource path="res://Assets/green.png" type="Texture" id=12]
[ext_resource path="res://Assets/finger-pointing-down-emoji-by-google.png" type="Texture" id=13]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 50
outline_size = 5
outline_color = Color( 0.0509804, 0.00392157, 0.00392157, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )
__meta__ = {
"_edit_horizontal_guides_": [ 24.8121 ]
}

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 370.173, 289.71 )

[node name="TutBubble" type="TextureRect" parent="Node2D"]
margin_left = -312.213
margin_top = -85.1716
margin_right = 287.787
margin_bottom = 214.828
rect_scale = Vector2( 0.681012, 0.76 )
texture = ExtResource( 2 )

[node name="MessageLabel2" type="Label" parent="Node2D/TutBubble"]
margin_left = 455.303
margin_top = 94.1355
margin_right = 850.304
margin_bottom = 186.136
rect_scale = Vector2( 1.41176, 1.26136 )
custom_fonts/font = SubResource( 1 )
text = "a"

[node name="Tut" type="Node2D" parent="."]
position = Vector2( 418, 290 )
scale = Vector2( 1.08908, 1.11839 )
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = -1.16011
margin_top = -3.75379
margin_right = 38.8399
margin_bottom = 36.2463
rect_scale = Vector2( 12.9512, 37.89 )

[node name="ScoreLabel" type="Label" parent="."]
visible = false
margin_left = 209.964
margin_top = 72.4849
margin_right = 430.964
margin_bottom = 197.485
rect_scale = Vector2( 0.999999, 1.08 )
custom_fonts/font = SubResource( 2 )
text = "0
"

[node name="HighScoreLabel" type="Label" parent="."]
margin_left = 77.2669
margin_top = 79.2217
margin_right = 576.267
margin_bottom = 204.222
rect_scale = Vector2( 0.679999, 0.679999 )
custom_fonts/font = SubResource( 2 )
text = "      High Score: 0
"

[node name="EndGameLabel" type="Label" parent="."]
visible = false
margin_left = 117.411
margin_top = 92.698
margin_right = 616.411
margin_bottom = 409.698
rect_scale = Vector2( 0.679999, 0.679999 )
custom_fonts/font = SubResource( 2 )
text = "Last Score: 0
Best Score: 0
"

[node name="TextureRect" type="TextureRect" parent="EndGameLabel"]
show_behind_parent = true
margin_left = -277.27
margin_top = -372.723
margin_right = 574.73
margin_bottom = 107.277
rect_scale = Vector2( 1.23529, 1.58824 )
texture = ExtResource( 5 )

[node name="MessageLabel" type="Label" parent="."]
margin_left = 52.2107
margin_top = 122.846
margin_right = 447.211
margin_bottom = 214.846
custom_fonts/font = SubResource( 1 )
text = "TriPpY tExTeR"

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 88.849
margin_top = 511.14
margin_right = 288.849
margin_bottom = 811.14
rect_scale = Vector2( 0.367285, 0.432757 )
toggle_mode = true
pressed = true
action_mode = 0
texture_normal = ExtResource( 6 )

[node name="TextureRect2" type="TextureRect" parent="."]
visible = false
margin_left = 100.0
margin_top = 580.0
margin_right = 937.0
margin_bottom = 1286.0
rect_scale = Vector2( 0.0529977, 0.0831983 )
mouse_filter = 2
texture = ExtResource( 7 )

[node name="InstructionLabel" type="Label" parent="."]
visible = false
margin_left = 18.6521
margin_top = 17.3056
margin_right = 464.652
margin_bottom = 590.306
custom_fonts/font = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="InstructionLabel"]
position = Vector2( 188.758, 433.42 )
scale = Vector2( 0.72, 0.840001 )
texture = ExtResource( 2 )

[node name="InstructionLabel6" type="Label" parent="InstructionLabel/Sprite"]
margin_left = 142.67
margin_top = -59.6214
margin_right = 588.67
margin_bottom = 513.379
rect_scale = Vector2( 2, 1.18945 )
custom_fonts/font = SubResource( 1 )
text = "p"

[node name="InstructionLabel2" type="Label" parent="InstructionLabel"]
margin_left = -6.47543
margin_top = 572.789
margin_right = 439.525
margin_bottom = 1145.79
custom_fonts/font = SubResource( 1 )
text = "
Do not press
"

[node name="InstructionLabel4" type="Label" parent="InstructionLabel"]
margin_left = 51.7825
margin_top = 436.437
margin_right = 497.782
margin_bottom = 1009.44
custom_fonts/font = SubResource( 1 )
text = "         Press
  "

[node name="InstructionLabel3" type="Label" parent="InstructionLabel"]
margin_left = -19.4469
margin_top = 455.863
margin_right = 444.553
margin_bottom = 1028.86
custom_fonts/font = SubResource( 1 )
text = "       v                  v"

[node name="InstructionLabel5" type="Label" parent="InstructionLabel"]
margin_left = 7.85774
margin_top = 595.84
margin_right = 453.858
margin_bottom = 1168.84
custom_fonts/font = SubResource( 1 )
text = "^        ^   ^    ^"

[node name="Sprite3" type="Sprite" parent="InstructionLabel"]
position = Vector2( -49.2131, 435.364 )
scale = Vector2( 0.72, 0.840001 )
texture = ExtResource( 2 )

[node name="InstructionLabel7" type="Label" parent="InstructionLabel/Sprite3"]
margin_left = 148.366
margin_top = -59.6214
margin_right = 594.366
margin_bottom = 513.379
rect_scale = Vector2( 2, 1.18945 )
custom_fonts/font = SubResource( 1 )
text = "a"

[node name="LevelLabel" type="Label" parent="."]
visible = false
margin_left = 132.68
margin_top = 176.444
margin_right = 527.68
margin_bottom = 268.444
custom_fonts/font = SubResource( 1 )
text = "Level 0"

[node name="MessageTimer" type="Timer" parent="."]
one_shot = true

[node name="FlashTimer" type="Timer" parent="."]
wait_time = 0.32
one_shot = true

[node name="LevelTimer" type="Timer" parent="."]
one_shot = true

[node name="InstructionButton" type="Button" parent="."]
visible = false
margin_left = 128.934
margin_top = 281.548
margin_right = 637.934
margin_bottom = 365.548
rect_scale = Vector2( 0.443736, 0.966366 )
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "          Instructions"

[node name="TextureRect" type="TextureRect" parent="InstructionButton"]
margin_left = 27.8099
margin_top = 8.63852
margin_right = 91.8099
margin_bottom = 72.6385
rect_scale = Vector2( 2.15, 1 )
texture = ExtResource( 8 )

[node name="TextureRect5" type="TextureRect" parent="."]
margin_left = -419.192
margin_top = -94.1907
margin_right = 380.808
margin_bottom = 705.809
rect_scale = Vector2( 0.0687723, 0.0745428 )
rect_pivot_offset = Vector2( 474.344, 715.28 )
texture = ExtResource( 9 )

[node name="TextureRect6" type="TextureRect" parent="."]
margin_left = -342.803
margin_top = -92.963
margin_right = 457.197
margin_bottom = 707.037
rect_scale = Vector2( 0.0687723, 0.0745428 )
rect_pivot_offset = Vector2( 474.344, 715.28 )
mouse_filter = 2
texture = ExtResource( 9 )

[node name="TextureRect7" type="TextureRect" parent="."]
margin_left = -265.552
margin_top = -99.9625
margin_right = 534.448
margin_bottom = 700.037
rect_scale = Vector2( 0.0687723, 0.0745428 )
rect_pivot_offset = Vector2( 474.344, 715.28 )
texture = ExtResource( 9 )

[node name="TextureRect8" type="TextureRect" parent="."]
margin_left = -190.574
margin_top = -99.9626
margin_right = 609.426
margin_bottom = 700.037
rect_scale = Vector2( 0.0687723, 0.0745428 )
rect_pivot_offset = Vector2( 474.344, 715.28 )
texture = ExtResource( 9 )

[node name="TextureRect9" type="TextureRect" parent="."]
margin_left = -117.868
margin_top = -102.235
margin_right = 682.132
margin_bottom = 697.765
rect_scale = Vector2( 0.0687723, 0.0745428 )
rect_pivot_offset = Vector2( 474.344, 715.28 )
texture = ExtResource( 9 )

[node name="TextureRect10" type="TextureRect" parent="."]
margin_left = -42.8892
margin_top = -102.235
margin_right = 757.111
margin_bottom = 697.765
rect_scale = Vector2( 0.0687723, 0.0745428 )
rect_pivot_offset = Vector2( 474.344, 715.28 )
texture = ExtResource( 9 )

[node name="StartButton" type="Button" parent="."]
visible = false
margin_left = 128.934
margin_top = 194.402
margin_right = 599.934
margin_bottom = 275.402
rect_scale = Vector2( 0.483736, 0.926365 )
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 3 )
text = "          Play Again "

[node name="TextureRect" type="TextureRect" parent="StartButton"]
margin_left = 29.0
margin_top = 9.0
margin_right = 98.0
margin_bottom = 73.0
rect_scale = Vector2( 2.07497, 1.01633 )
texture = ExtResource( 10 )

[node name="BackButton" type="Button" parent="."]
visible = false
margin_left = 151.364
margin_top = 245.553
margin_right = 293.364
margin_bottom = 312.553
size_flags_stretch_ratio = 0.0
custom_fonts/font = SubResource( 3 )
text = "Back"

[node name="TextureRect12" type="TextureRect" parent="."]
margin_left = 18.6521
margin_top = 320.0
margin_right = 1298.65
margin_bottom = 1040.0
rect_scale = Vector2( 0.199996, 0.279997 )
mouse_filter = 2
texture = ExtResource( 11 )

[node name="TextureRect11" type="TextureRect" parent="."]
visible = false
margin_left = 10.0
margin_top = 324.725
margin_right = 1290.0
margin_bottom = 1044.73
rect_scale = Vector2( 0.203411, 0.274083 )
mouse_filter = 2
texture = ExtResource( 12 )

[node name="Node2D2" type="Node2D" parent="."]
visible = false
position = Vector2( 117.411, 480 )
rotation = -3.12983
scale = Vector2( 1.28166, -1.26858 )

[node name="TextureRect2" type="TextureRect" parent="Node2D2"]
margin_left = -31.4309
margin_top = -31.1174
margin_right = 480.569
margin_bottom = 480.883
rect_rotation = 359.999
rect_scale = Vector2( 0.120294, 0.131346 )
mouse_filter = 2
texture = ExtResource( 13 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_left = -49.028
margin_top = -27.0144
margin_right = -9.02803
margin_bottom = 12.9856
rect_scale = Vector2( 14.2271, 19.3919 )
mouse_filter = 2
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="timeout" from="FlashTimer" to="." method="_on_FlashTimer_timeout"]
[connection signal="timeout" from="LevelTimer" to="." method="_on_LevelTimer_timeout"]
[connection signal="pressed" from="InstructionButton" to="." method="_on_InstructionButton_pressed"]
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
